<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetStart="@dimen/spacing_md"
            app:contentInsetEnd="@dimen/spacing_md">

            <LinearLayout
                android:id="@+id/toolbar_start_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/cd_back"
                    android:focusable="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_arrow_back" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_xs"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/library_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/coloring_library_title"
                        android:textColor="@color/color_text_primary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/library_subtitle_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/library_subtitle"
                        android:textColor="@color/color_text_secondary"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/search_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_md"
        android:layout_marginTop="@dimen/spacing_sm"
        android:layout_marginEnd="@dimen/spacing_md"
        android:background="@drawable/bg_pill_pale"
        android:drawablePadding="@dimen/spacing_sm"
        android:drawableStart="@drawable/ic_search"
        android:fontFamily="@font/inter"
        android:hint="@string/search_drawings_hint"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="@dimen/spacing_md"
        android:paddingTop="@dimen/spacing_sm"
        android:paddingEnd="@dimen/spacing_md"
        android:paddingBottom="@dimen/spacing_sm"
        android:textColor="@color/color_text_primary"
        android:textColorHint="@color/color_text_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/difficulty_filter_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_md"
        android:layout_marginTop="@dimen/spacing_sm"
        android:layout_marginEnd="@dimen/spacing_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_input"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_all"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:checkedIconTint="@color/color_white"
            android:fontFamily="@font/inter"
            android:text="@string/filter_all"
            android:textColor="@color/selector_chip_text"
            app:chipBackgroundColor="@color/selector_chip_background"
            app:chipStrokeWidth="0dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_easy"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/filter_easy"
            app:checkedIconTint="@color/color_white"
            android:textColor="@color/selector_chip_text"
            app:chipBackgroundColor="@color/selector_chip_background"
            app:chipStrokeWidth="0dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_medium"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            app:checkedIconTint="@color/color_white"
            android:text="@string/filter_medium"
            android:textColor="@color/selector_chip_text"
            app:chipBackgroundColor="@color/selector_chip_background"
            app:chipStrokeWidth="0dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_detailed"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            app:checkedIconTint="@color/color_white"
            android:text="@string/filter_detailed"
            android:textColor="@color/selector_chip_text"
            app:chipBackgroundColor="@color/selector_chip_background"
            app:chipStrokeWidth="0dp" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/library_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_sm"
        android:clipToPadding="false"
        android:paddingStart="@dimen/spacing_sm"
        android:paddingEnd="@dimen/spacing_sm"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/result_count_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/difficulty_filter_group"
        app:spanCount="2"
        tools:itemCount="6"
        tools:listitem="@layout/item_coloring_page" />

    <TextView
        android:id="@+id/result_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_md"
        android:fontFamily="@font/inter"
        android:text="@string/library_result_count"
        android:textColor="@color/color_text_secondary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
